kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: hasankuspinar/backend:latest
          ports:
            - containerPort: 5000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.14
          command: ["/cloud_sql_proxy",
                    "-instances=weighty-sled-459211-h7:us-central1:todo-db=tcp:3306",
                    "-credential_file=/secrets/cloudsql/cloudsql-key.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
